# QtSlideShow

./: CMakeLists.txt  README.md  main.cpp
include/: commonDef.h  slideShowDelegate.h  slideShowView.h  slideShowViewer.h  slideShowWorker.h
src/: slideShowDelegate.cpp  slideShowView.cpp  slideShowViewer.cpp  slideShowWorker.cpp
